...
    <string name="learning_settings_btPresentation">PRESENTATION</string>
    <string name="learning_settings_btRepresentation">REPRESENTATION</string>
    <string name="learning_settings_btEvaluation">EVALUATION</string>
    <string name="learning_settings_tvLearningMode">LEARNING MODE</string>

    <string name="info">Info</string>
    <string name="modify_categories">Modify name and categories</string>
    <string name="add_new_picture">Add new picture</string>
    <string name="delete_dataset">Delete dataset</string>
    <string name="enter_dataset_name">Enter dataset name</string>
    <string name="ds_name">Dataset name</string>
    <string name="imagetobedisplayed">image to be displayed</string>
    <string name="DataOverview_CreateButton">Create dataset</string>
...
        - Here are displayed all the pictures of the selected category.\n\n
        - A representative picture is a picture that is used to represent the category in the dataset.
        Such a picture is not part of the pictures of the category.\n\n
        Possible actions :\n\n
        - To delete pictures : click longer on the picture you want to delete, select all the pictures to delete and press the trashcan icon.\n\n
        - To set an picture as representative of the category : click longer on the picture and select the star icon.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <plurals name="numberOfSelectedPicturesText">
        <item quantity="one">%d picture selected </item>
        <item quantity="other">%d pictures selected </item>
    </plurals>
    <string name="SignInFragment_loginStatusSuccessMessage">Welcome %1$s</string>
    <string name="SignInFragment_loginStatusDefaultMessage">Not logged in</string>
...
