<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/learningDatasetSelectionFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.learning.LearningDatasetSelectionFragment"
        android:label="@string/nav_graph_label_learning_dataset_selection"
        tools:layout="@layout/fragment_learning_dataset_selection">
        <action
            android:id="@+id/action_learningDatasetSelectionFragment_to_learningSettingsFragment"
            app:destination="@id/learningSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/datasetsOverviewFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.DatasetsOverviewFragment"
        android:label="@string/nav_graph_label_datasets_overview"
        tools:layout="@layout/fragment_datasets_overview">
        <action
            android:id="@+id/action_datasetsOverviewFragment_to_displayDatasetFragment"
            app:destination="@id/displayDatasetFragment" />
        <action
            android:id="@+id/action_datasetsOverviewFragment_to_categoriesEditingFragment"
            app:destination="@id/categoriesEditingFragment" />
    </fragment>
    <fragment
        android:id="@+id/learningSettingsFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.learning.LearningSettingsFragment"
        android:label="@string/nav_graph_label_learning_settings"
        tools:layout="@layout/fragment_learning_settings">
        <argument
            android:name="datasetId"
            app:argType="string" />
        <action
            android:id="@+id/action_learningSettingsFragment_to_learningFragment"
            app:destination="@id/learningFragment" />
    </fragment>
    <fragment
        android:id="@+id/learningFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.learning.LearningFragment"
        android:label="@string/nav_graph_label_learning"
        tools:layout="@layout/fragment_learning">
        <argument
            android:name="datasetId"
            app:argType="string" />
        <argument
            android:name="learningMode"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.view.learning.LearningMode" />
        <action
            android:id="@+id/action_learningFragment_to_evaluationResultFragment"
            app:destination="@id/evaluationResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/displayDatasetFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.DisplayDatasetFragment"
        android:label="@string/nav_graph_label_display_dataset"
        tools:layout="@layout/fragment_display_dataset">
        <action
            android:id="@+id/action_displayDatasetFragment_to_categoriesEditingFragment"
            app:destination="@id/categoriesEditingFragment" />
        <action
            android:id="@+id/action_displayDatasetFragment_to_displayImageSetFragment"
            app:destination="@id/displayImageSetFragment" />
        <argument
            android:name="datasetId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_displayDatasetFragment_to_addPictureFragment"
            app:destination="@id/addPictureFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoriesEditingFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.MetadataEditingFragment"
        android:label="@string/nav_graph_label_categories_editing"
        tools:layout="@layout/fragment_metadata_editing">
        <action
            android:id="@+id/action_categoriesEditingFragment_to_displayDatasetFragment"
            app:destination="@id/displayDatasetFragment"
            app:popUpTo="@id/datasetsOverviewFragment"
            app:popUpToInclusive="false" />
        <argument
            android:name="datasetId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/displayImageSetFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.DisplayImageSetFragment"
        android:label="@string/nav_graph_label_display_image_set"
        tools:layout="@layout/fragment_display_image_set">
        <action
            android:id="@+id/action_displayImageSetFragment_to_displayImageFragment"
            app:destination="@id/displayImageFragment" />
        <argument
            android:name="datasetId"
            app:argType="string" />
        <argument
            android:name="category"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.Category" />
    </fragment>
    <fragment
        android:id="@+id/displayImageFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.DisplayImageFragment"
        android:label="@string/nav_graph_label_display_image"
        tools:layout="@layout/fragment_display_image">
        <action
            android:id="@+id/action_displayImageFragment_to_displayImageSetFragment"
            app:destination="@id/displayImageSetFragment"
            app:popUpTo="@+id/displayImageSetFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_displayImageFragment_to_displayDatasetFragment"
            app:destination="@id/displayDatasetFragment"
            app:popUpTo="@+id/displayDatasetFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="picture"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.CategorizedPicture" />
        <argument
            android:name="datasetId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/takePictureFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.TakePictureFragment"
        android:label="@string/nav_graph_label_take_picture"
        tools:layout="@layout/fragment_take_picture">
        <argument
            android:name="categories"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.Category[]" />
        <argument
            android:name="datasetId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/selectPictureFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.SelectPictureFragment"
        android:label="@string/nav_graph_label_select_picture"
        tools:layout="@layout/fragment_select_picture">
        <argument
            android:name="categories"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.Category[]" />
        <argument
            android:name="datasetId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/addPictureFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.AddPictureFragment"
        android:label="@string/nav_graph_label_add_picture"
        tools:layout="@layout/fragment_add_picture">
        <action
            android:id="@+id/action_addPictureFragment_to_selectPictureFragment"
            app:destination="@id/selectPictureFragment" />
        <action
            android:id="@+id/action_addPictureFragment_to_takePictureFragment"
            app:destination="@id/takePictureFragment" />
        <argument
            android:name="categories"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.Category[]" />
        <argument
            android:name="datasetId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/googleSignInWidget"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.GoogleSignInFragment"
        android:label="@string/nav_graph_label_login"
        tools:layout="@layout/fragment_google_sign_in" >
        <action
            android:id="@+id/action_googleSignInWidget_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@+id/homeFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.HomeFragment"
        android:label="@string/nav_graph_label_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_learningDatasetSelectionFragment"
            app:destination="@id/learningDatasetSelectionFragment" />
    </fragment>
    <fragment
        android:id="@+id/evaluationResultFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.learning.EvaluationResultFragment"
        android:label="@string/nav_graph_label_evaluation_result">
        <argument
            android:name="evaluationResult"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.learning.EvaluationResult" />
        <action
            android:id="@+id/action_evaluationResultFragment_to_learningDatasetSelectionFragment"
            app:destination="@id/learningDatasetSelectionFragment"
            app:popUpTo="@+id/learningDatasetSelectionFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
