<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/display_dataset_menu_modify_name_and_categories"
        android:title="@string/MetadataEditing_modifyCategoriesButton" />
    <item
        android:id="@+id/display_dataset_menu_add_new_picture"
        android:title="@string/DisplayDataset_addNewPictureButton" />
    <item
        android:id="@+id/display_dataset_menu_delete_dataset"
        android:title="@string/DisplayDataset_deleteDatasetButton" />
</menu>